kubernetes/ingress-test/ingress-backend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: ingress-backend-service

spec:
  type: ClusterIP
  ports:
    - targetPort: 5050
      port: 5050

  selector:
    type: backend
